--- a/package.json
+++ b/package.json
@@ -18,6 +18,17 @@
     "@angular/platform-browser": "^16.1.7",
     "@angular/platform-browser-dynamic": "^16.1.7",
     "@angular/router": "^16.1.7",
+    "@editorjs/editorjs": "^2.27.2",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/underline": "^1.1.0",
+    "@types/editorjs__header": "^2.6.0",
+    "codex-notifier": "^1.1.2",
+    "codex-tooltip": "^1.0.5",
+    "editorjs-inline-tool": "^0.4.0",
     "primeicons": "^6.0.1",
     "primeng": "16.0.1",
     "rxjs": "~7.8.0",
