--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^16.1.7",
     "@angular/compiler": "^16.1.7",
     "@angular/core": "^16.1.7",
+    "@angular/fire": "7.6.1",
     "@angular/forms": "^16.1.7",
     "@angular/platform-browser": "^16.1.7",
     "@angular/platform-browser-dynamic": "^16.1.7",
@@ -28,11 +29,14 @@
     "@types/editorjs__header": "^2.6.0",
     "codex-notifier": "^1.1.2",
     "codex-tooltip": "^1.0.5",
+    "editorjs-html": "3.3.0",
     "editorjs-inline-tool": "^0.4.0",
+    "marked": "^6.0.0",
     "primeicons": "^6.0.1",
     "primeng": "16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "turndown": "^7.1.2",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
